--- a/R-MachineLearning.Rmd
+++ b/R-MachineLearning.Rmd
@@ -1,4 +1,4 @@
----
+```---
 title: "R ML excercises"
 output:
   html_document:
@@ -233,7 +233,7 @@ Given that we know the test data, we can treat it like we did our training data 
 
 Which feature best optimizes our overall accuracy? - Petal.Width = 0.94
 
-Now we will perform some exploratory data analysis on the data.
+Now we will perform some exploratory data analysis on the data.sqrt(mean((y_hat-test_set$y)^2))
 
 Notice that Petal.Length and Petal.Width in combination could potentially be more information than either feature alone.
 
@@ -301,7 +301,7 @@ e.g. the expectation of squared error - *expected loss*
 ##The main task of machine learning is to use data to estimate conditional probabilities 
 $$f(x)≡E(Y|X=X)$$
 for any set of features $${x=(x_1,...,x_p)}$$
-#Excercises
+#Excercisessqrt(mean((y_hat-test_set$y)^2))
 We have a hypothetical population of 1 million individuals with the following conditional probabilities as described below:
 The test is positive 85% of the time when tested on a patient with the disease (high sensitivity): 
 
@@ -337,10 +337,10 @@ for each x.
 ```{r}
 library(dslabs)
 data("heights")
-heights %>% 
+hey <- heights %>% 
 	mutate(height = round(height)) %>%
 	group_by(height) %>%
-	summarize(p = mean(sex == "Male")) %>%
+	#summarize(p = mean(sex == "Male")) #%>%
 	qplot(height, p, data =.)
 ```
 
@@ -370,7 +370,8 @@ dat %>%
 #Linear regression
 
 ```{r}
-galton_heights <- GaltonFamilies %>% filter(childNum == 1 & gender == "male") %>% select (father, childHeight) %>% rename(son = childHeight)
+galton_heights <- GaltonFamilies %>% filter(childNum == 1 & gender == "male") %>% select (father, childHeight)
+colnames(galton_heights)[colnames(galton_heights)=="childHeight"] <- "son"
 y <- galton_heights$son
 test_index <- createDataPartition(y, times = 1, p=0.5, list = FALSE)
 train_set <- galton_heights %>% slice(-test_index)
@@ -421,6 +422,164 @@ rmses <- replicate(100,  {
   rmse <- sqrt(mean((y_hat - test_set$y)^2)) 
   rmse
 }) 
-mean(rmse)
-sd(rmse)
+mean(rmses)
+sd(rmses)
+```
+
+Now we will repeat the above but using larger datasets. Repeat the previous exercise but for datasets with n <- c(100, 500, 1000, 5000, 10000). Save the average and standard deviation of RMSE from the 100 repetitions using a seed of 1. Hint: use the sapply or map functions.
+
+```{r}
+set.seed(1)
+map(c(100, 500, 1000, 5000, 10000), function(dataSetLength) {
+  
+
+  Sigma <- 9*matrix(c(1.0, 0.5, 0.5, 1.0), 2, 2)
+  dat <- MASS::mvrnorm(n = dataSetLength, c(69, 69), Sigma) %>%
+  data.frame() %>% setNames(c("x", "y"))
+  rmses <- replicate(100,  { 
+    test_index <- createDataPartition(dat$y, times = 1, p=0.5, list = FALSE)
+    train_set <- dat %>% slice(-test_index)
+    test_set <- dat %>% slice(test_index)
+    fit <-lm(y ~ x, data=train_set)
+    y_hat <- predict(fit, test_set)
+    rmse <- sqrt(mean((y_hat - test_set$y)^2)) 
+    rmse
+  })
+  
+  print(paste("Items: ", toString(dataSetLength)))
+  print(mean(rmses))
+  print(sd(rmses))
+})
+```
+Now repeat the exercise from Q1, this time making the correlation between x and y larger, as in the following code:
+
+```{r}
+set.seed(1)
+n <- 100
+Sigma <- 9*matrix(c(1.0, 0.95, 0.95, 1.0), 2, 2)
+dat <- MASS::mvrnorm(n = 100, c(69, 69), Sigma) %>%
+data.frame() %>% setNames(c("x", "y"))
+set.seed(1)
+rmses <- replicate(100,  { 
+  test_index <- createDataPartition(dat$y, times = 1, p=0.5, list = FALSE)
+  train_set <- dat %>% slice(-test_index)
+  test_set <- dat %>% slice(test_index)
+  fit <-lm(y ~ x, data=train_set)
+  y_hat <- predict(fit, test_set)
+  rmse <- sqrt(mean((y_hat - test_set$y)^2)) 
+  rmse
+}) 
+mean(rmses)
+sd(rmses)
+```
+
+Create a data set using the following code.
+Note that y is correlated with both x_1 and x_2 but the two predictors are independent of each other, as seen by cor(dat).
+
+Use the caret package to partition into a test and training set of equal size. Compare the RMSE when using just x_1, just x_2 and both x_1 and x_2. Train a linear model for each.
+
+Which of the three models performs the best (has the lowest RMSE)?
+```{r}
+set.seed(1)
+n <- 1000
+Sigma <- matrix(c(1.0, 0.75, 0.75, 0.75, 1.0, 0.25, 0.75, 0.25, 1.0), 3, 3)
+dat <- MASS::mvrnorm(n = 100, c(0, 0, 0), Sigma) %>%
+	data.frame() %>% setNames(c("y", "x_1", "x_2"))
+
+set.seed(1)
+test_index <- createDataPartition(dat$y, times = 1, p = 0.5, list = FALSE)
+train_set <- dat %>% slice(-test_index)
+test_set <- dat %>% slice(test_index)
+
+fit <- lm(y ~ x_1, data = train_set)
+y_hat <- predict(fit, newdata = test_set)
+sqrt(mean((y_hat-test_set$y)^2))
+
+fit <- lm(y ~ x_2, data = train_set)
+y_hat <- predict(fit, newdata = test_set)
+sqrt(mean((y_hat-test_set$y)^2))
+
+fit <- lm(y ~ x_1 + x_2, data = train_set)
+y_hat <- predict(fit, newdata = test_set)
+sqrt(mean((y_hat-test_set$y)^2))
+```
+
+Repeat the exercise from q6 but now create an example in which x_1 and x_2 are highly correlated.
+```{r}
+set.seed(1)
+n <- 1000
+Sigma <- matrix(c(1.0, 0.75, 0.75, 0.75, 1.0, 0.95, 0.75, 0.95, 1.0), 3, 3)
+dat <- MASS::mvrnorm(n = 100, c(0, 0, 0), Sigma) %>%
+	data.frame() %>% setNames(c("y", "x_1", "x_2"))
+
+set.seed(1)
+test_index <- createDataPartition(dat$y, times = 1, p = 0.5, list = FALSE)
+train_set <- dat %>% slice(-test_index)
+test_set <- dat %>% slice(test_index)
+
+fit <- lm(y ~ x_1, data = train_set)
+y_hat <- predict(fit, newdata = test_set)
+sqrt(mean((y_hat-test_set$y)^2))
+
+fit <- lm(y ~ x_2, data = train_set)
+y_hat <- predict(fit, newdata = test_set)
+sqrt(mean((y_hat-test_set$y)^2))
+
+fit <- lm(y ~ x_1 + x_2, data = train_set)
+y_hat <- predict(fit, newdata = test_set)
+sqrt(mean((y_hat-test_set$y)^2))
+```
+
+#Logistic regression excercise
+Define a dataset using the following code:
+
+```{r}
+set.seed(2)
+make_data <- function(n = 1000, p = 0.5, 
+				mu_0 = 0, mu_1 = 2, 
+				sigma_0 = 1,  sigma_1 = 1){
+
+y <- rbinom(n, 1, p)
+f_0 <- rnorm(n, mu_0, sigma_0)
+f_1 <- rnorm(n, mu_1, sigma_1)
+x <- ifelse(y == 1, f_1, f_0)
+  
+test_index <- createDataPartition(y, times = 1, p = 0.5, list = FALSE)
+
+list(train = data.frame(x = x, y = as.factor(y)) %>% slice(-test_index),
+	test = data.frame(x = x, y = as.factor(y)) %>% slice(test_index))
+}
+dat <- make_data()
+dat$train %>% ggplot(aes(x, color = y)) + geom_density()
+set.seed(1)
+delta <- seq(0, 3, len = 25)
+res <- sapply(delta, function(d){
+	dat <- make_data(mu_1 = d)
+	fit_glm <- dat$train %>% glm(y ~ x, family = "binomial", data = .)
+	y_hat_glm <- ifelse(predict(fit_glm, dat$test) > 0.5, 1, 0) %>% factor(levels = c(0, 1))
+	mean(y_hat_glm == dat$test$y)
+})
+qplot(delta, res)
+```
+#Smoothing
+##Problem with one predictor
+Let's estimate the time trend in the popular vote from the 2008 election.
+```{r}
+data("polls_2008")
+qplot(day, margin, data=polls_2008)
+```
+###Let's predict y given the day x.
+This is the mathematical model for the observed poll margin Y.
+$Y_i=f(x_i)+\epsilon_i$
+The conditional expectation is:
+f(x)=E(Y|X=x)
+Linear regression shows:
+```{r}
+day_margin_fit <-lm(margin ~ day, data=polls_2008)
+polls_2008_scatter_data <- polls_2008 %>% mutate(resid=resid(day_margin_fit), color=ifelse(resid(day_margin_fit) >0,"+","-"), fitted=fitted(day_margin_fit))
+ggplot(aes(day, margin, color=color), data=polls_2008_scatter_data) + geom_point() + geom_abline(intercept = day_margin_fit$coefficients[1], slope=day_margin_fit$coefficients[2])
+    
+#span <- 7 fit <- with(polls_2008, ksmooth(day, margin, x.points = day, kernel="normal", bandwidth = span))
+
+#polls_2008 %>% mutate(smooth = fit$y) %>% ggplot(aes(day, margin)) + geom_point(size = 3, alpha = .5, color = "grey") + geom_line(aes(day, smooth), color="red")
 ```
