--- a/R-MachineLearning.Rmd
+++ b/R-MachineLearning.Rmd
@@ -1,4 +1,4 @@
-```---
+---
 title: "R ML excercises"
 output:
   html_document:
@@ -16,9 +16,11 @@ check.packages <- function(pkg){
         install.packages(new.pkg, dependencies = TRUE)
     sapply(pkg, require, character.only = TRUE)
 }
-packages<-c("ggplot2", "tidyverse", "lubridate", "caret", "dslabs", "dplyr", "plyr","HistData")
+packages<-c("ggplot2", "tidyverse", "lubridate", "caret", "dslabs", "dplyr", "plyr","HistData","pdftools","devtools")
 check.packages(packages)
 
+devtools::install_bioc("genefilter")
+library(genefilter)
 data("heights")
 data("iris")
 ```
@@ -600,4 +602,175 @@ polls_2008 %>% mutate(smooth = fit$y) %>% ggplot(aes(day, margin)) + geom_point(
 ##Local Weighted regression(loess)
 Instead of assuming that a function is approximately constant in a window, we decide function is locally linear (Taylor's theorem). This way larger windows can be considered. Let's start with 3 week window.
 Here's the model.
-$E[Y_i|X_i=x_i] = \beta_0 + \beta_1(x_i-x_0)$ if $|x_i-x_0| \leq 10.5$```
+$E[Y_i|X_i=x_i] = \beta_0 + \beta_1(x_i-x_0)$ if $|x_i-x_0| \leq 10.5$
+
+The final estimate is given as:
+```{r}
+total_days <-diff(range(polls_2008$day))
+span <- 21/total_days
+fit <- loess(margin~day, degree=1, span=span, data=polls_2008)
+polls_2008 %>% mutate(smooth=fit$fitted) %>% ggplot(aes(day, margin)) + geom_point(size=3, alpha=.5, color="grey") + geom_line(aes(day, smooth), color="red")
+```
+###Excercise
+Suppose we want to predict 2s and 7s in the mnist_27 dataset with just the second covariate. Can we do this? On first inspection it appears the data does not have much predictive power.
+
+In fact, if we fit a regular logistic regression the coefficient for x_2 is not significant!
+
+This can be seen using this code:
+
+```{r}
+library(broom)
+mnist_27$train %>% glm(y ~ x_2, family = "binomial", data = .) %>% tidy()
+qplot(x_2, y, data = mnist_27$train)
+#Fit a loess line to the data above and plot the results. What do you observe?
+mnist_27$train %>% 
+	mutate(y = ifelse(y=="7", 1, 0)) %>%
+	ggplot(aes(x_2, y)) + 
+	geom_smooth(method = "loess")
+
+```
+
+#Matrices
+1000 predictors and 1000 labels from the mnist package:
+```{r}
+mnist<-read_mnist()
+predictors <-mnist$train$images[1:1000,]
+labels <-mnist$train$labels[1:1000]
+
+```
+
+##Binding matrices from vectors
+```{r}
+#defining a 2x3 matrix
+v1<-c("boom", "bam", "bim")
+v2<-c("buum", "bom", "bum")
+cbind(v1, v2)
+```
+##Summaries
+```{r}
+pixelDarknessTotal <- rowSums(predictors)
+pixelDarknessAvg <- rowMeans(predictors)
+print("See distribution of pixel darkess.")
+data.frame(labels=as.factor(labels), row_averages=pixelDarknessAvg) %>% ggplot(aes(labels,row_averages)) + geom_boxplot() + labs(title="Pixel darkness distribution by row")
+```
+##Indexing and binarizing data
+```{r}
+print("Binarizing all pixels < 125.5 to 0 and > 125.5 as 1")
+bin_preidctors<-predictors;
+bin_preidctors[bin_preidctors<255/2] <-0;
+bin_preidctors[bin_preidctors>255/2] <-1;
+#For each digit in the mnist training data, compute the proportion of pixels that are in the grey area, defined as values between 50 and 205. (To visualize this, you can make a boxplot by digit class.)
+gray_preidctors<- predictors
+gray_preidctors[gray_preidctors>205 | gray_preidctors<50] <-0;
+gray_preidctors[gray_preidctors<205 & gray_preidctors>50] <-1;
+data.frame(labels=as.factor(labels), row_averages=rowMeans(gray_preidctors)) %>% ggplot(aes(labels,row_averages)) + geom_boxplot() + labs(title="Pixel darkness distribution by row")
+mean(rowMeans(predictors<205 & predictors>50))
+                
+```
+#Distance
+Get some random samples of 2s and sevens
+```{r}
+set.seed(0)
+sample_index <- which(mnist$train$labels %in% c(2,7)) %>% sample(500)
+sample_predictors <- mnist$train$images[sample_index,]
+sample_labels <- mnist$train$labels[sample_index]
+sample_labels[1:3]
+predictors_7_1 <- sample_predictors[1, ]
+predictors_7_2 <- sample_predictors[2, ]
+predictors_2_1 <- sample_predictors[3, ]
+#checking distances between different predictors
+sqrt(sum((predictors_7_1 - predictors_7_2)^2))
+sqrt(sum((predictors_7_1 - predictors_2_1)^2))
+sqrt(sum((predictors_7_2 - predictors_2_1)^2))
+#get the distance automatically for all rows
+image_distance <- dist(sample_predictors) %>% as.matrix()
+#image(image_distance[order(sample_labels), order(sample_labels)])
+```
+##Excercise
+```{r}
+library(dslabs)
+data("tissue_gene_expression")
+#This dataset includes a matrix x:
+
+dim(tissue_gene_expression$x)
+#his matrix has the gene expression levels of 500 genes from 189 biological samples representing seven different tissues. The tissue type is stored in y:
+
+table(tissue_gene_expression$y)
+distances<- dist(tissue_gene_expression$x) 
+#Compare the distances between observations 1 and 2 (both cerebellum), observations 39 and 40 (both colon), and observations 73 and 74 (both endometrium).
+
+#Distance-wise, are samples from tissues of the same type closer to each other?
+ind <- c(1, 2, 39, 40, 73, 74)
+as.matrix(distances)[ind,ind]
+
+```
+
+#K nearest neigbours
+```{r}
+#Let's compare with the logistics regression
+fit_glm <- glm(y ~ x_1 + x_2, data=mnist_27$train, family="binomial")
+p_hat_logistic<-predict(fit_glm, mnist_27$test)
+y_hat_logistic<-factor(ifelse(p_hat_logistic > 0.5, 7, 2))
+#Try and beat that
+confusionMatrix(data = y_hat_logistic, reference=mnist_27$test$y)$overall[1]
+#Trying...
+knn_fit <- knn3( y ~ x_1 + x_2, data = mnist_27$train, k = 5) #k equals the neighbours 
+y_hat_knn <- predict(knn_fit, mnist_27$test, type = "class")
+confusionMatrix(data = y_hat_knn, reference=mnist_27$test$y)
+
+```
+
+#K-fold Cross-validation
+Remembering MSE: $$MSE = E\{\frac{1}{N} \sum_{i=1}^N(\widehat{Y}_i-Y_i)^2 \}$$
+
+When we have only one data set, the MSE is estimated with the observed MSE as follows: $$\widehat{MSE} =E\{\frac{1}{N} \sum_{i=1}^N(\widehat{y}_i-y_i)^2 \} $$
+Those quantities are reffered as true error and apparent error. (;
+
+As the apparent error is a random variable, the true error might be considered as: $$TE = \sum_{b=1}^B\sum_{i=1}^N (\widehat{y}_i^b-y_i^b)^2 $$
+Cross validation uses TE with the data we have, generating a series of random samples.
+
+The k-fold cross validaion uses a training data set in order to estimate a best single parameter value (for example k in knn), simulating a random variable from an excerpt from the training set.
+The set of parameters is referred as $\lambda$ .The obtained predicition from a single observation is denoted as $\widehat{y}_i(\lambda)$
+$$MSE(\lambda) = \sum_{b=1}^B\sum_{i=1}^N (\widehat{y}_i^b(\lambda)-y_i^b)^2 $$
+
+##Excercise 
+```{r}
+#Generate a set of random predictors using the following code:
+set.seed(1996)
+n <- 1000
+p <- 10000
+x <- matrix(rnorm(n*p), n, p)
+colnames(x) <- paste("x", 1:ncol(x), sep="_")
+y <- rbinom(n, 1, 0.5) %>% factor()
+x_subset <- x[, sample(p, 100)]
+
+#Run cross validation using logistic regression to fit the  model
+fit <- train(x_subset, y, method="glm")
+fit$results
+
+```
+Now we will search for predictors that are the most predictive.
+```{r}
+
+tt <- colttests(x, y)
+pvals <- tt$p.value
+ind <- which(pvals<= 0.01)
+x_subset <- x[, ind]
+
+#Run cross validation using logistic regression to fit the  model
+fit <- train(x_subset, y, method="glm")
+fit$results
+
+#Rerun cross validation using knn
+fit <- train(x_subset, y, method="knn", tuneGrid=data.frame(k = seq(101,301,25)))
+ggplot(fit)
+```
+
+```{r}
+#Use the train function to predict tissue from gene expression in the tissue_gen_expression ds
+library(dslabs)
+data("tissue_gene_expression")
+#This dataset includes a matrix x:
+fit <- train(tissue_gene_expression$x, tissue_gene_expression$y, method="knn")
+fit$results
+```
