--- a/R-MachineLearning.Rmd
+++ b/R-MachineLearning.Rmd
@@ -16,13 +16,13 @@ check.packages <- function(pkg){
         install.packages(new.pkg, dependencies = TRUE)
     sapply(pkg, require, character.only = TRUE)
 }
-packages<-c("ggplot2", "tidyverse", "lubridate", "caret", "dslabs", "dplyr", "plyr","HistData","pdftools","devtools")
+packages<-c("ggplot2", "tidyverse", "lubridate", "caret", "dslabs", "plyr", "dplyr", "HistData","pdftools","devtools", "rpart")
 check.packages(packages)
-
-devtools::install_bioc("genefilter")
-library(genefilter)
 data("heights")
 data("iris")
+devtools::install_bioc("genefilter")
+library(genefilter)
+
 ```
 
 Split by predictors and predicted value.
@@ -774,3 +774,191 @@ data("tissue_gene_expression")
 fit <- train(tissue_gene_expression$x, tissue_gene_expression$y, method="knn")
 fit$results
 ```
+
+#Bootstrap excercises
+The createResample function can be used to create bootstrap samples. For example, we can create 10 bootstrap samples for the mnist_27 dataset like this:
+```{r}
+set.seed(1995)
+indexes <- createResample(mnist_27$tain$y, 10)
+#How many times do 3, 4, and 7 appear in the first resampled index?
+sum(indexes[[1]] == 3)
+sum(indexes[[1]] == 4)
+sum(indexes[[1]] == 7)
+
+#How manu times do 3 appear in all resamples
+x=sapply(indexes, function(ind){
+	sum(ind == 3)
+})
+sum(x)
+```
+Generate a random dataset using the following code:
+
+```{r}
+
+#Estimate the 75th quantile, which we know is qnorm(0.75), with the sample quantile: quantile(y, 0.75).
+set.seed(1)
+B <- 10^5
+y <- rnorm(100, 0, 1) 
+  quantile_sd <- replicate(B, {
+    y <- rnorm(100, 0, 1)  
+    quantile(y, 0.75)
+  })
+  mean(quantile_sd)
+  sd(quantile_sd)
+
+#In practice, we can't run a Monte Carlo simulation. Use 10 bootstrap samples to estimate the standard error using just the initial sample y. Set the seed to 1.
+
+indexes <- createResample(y, 10)
+q_75_star <- sapply(indexes, function(ind){
+	y_star <- y[ind]
+	quantile(y_star, 0.75)
+})
+mean(q_75_star)
+sd(q_75_star)
+
+set.seed(1)
+indexes <- createResample(y, 10000)
+q_75_star <- sapply(indexes, function(ind){
+	y_star <- y[ind]
+	quantile(y_star, 0.75)
+})
+mean(q_75_star)
+sd(q_75_star)
+
+```
+#Naive bayes
+```{r}
+
+library(caret)
+#detach(package:plyr)
+data("heights")
+y <- heights$height
+set.seed(2)
+test_index <- createDataPartition(y, p= 0.5, list = FALSE)
+test_set <- heights %>% slice(test_index)
+train_set <- heights %>% slice(-test_index)
+conditional_parameters <- train_set %>% group_by(sex) %>% summarize(avg=mean(height), sd=sd(height))
+print("Heights training set conditional parameters are")
+conditional_parameters
+#getting the prevalence Y=1 (peopleS are female)
+pi <- train_set %>% summarise(pi=mean(sex=="Female")) %>% .$pi
+print("Prevalence is:")
+pi
+#f0 is fX|Y=0, f1 is fX|Y=1
+x <- test_set$height
+f0 <- dnorm(x, conditional_parameters$avg[2], conditional_parameters$sd[2])
+f1 <- dnorm(x, conditional_parameters$avg[1], conditional_parameters$sd[1])
+p_hat_bayes <- f1 * pi/(f1 * pi + f0 * (1-pi))
+
+data.frame(x=x,p_hat=p_hat_bayes) %>% ggplot(aes(x,p_hat_bayes)) + geom_point() + geom_smooth()
+
+#This sample is valid for our test and trainin sets, because Pi is ~0.23 in the overall data. 
+#But applying this value to real life simulation will give skewed results due to low specificity.
+#Naive bayes gives a direct way of fixing this. Replacing Pi's value! :D
+p_hat_bayes_unbiased <- f1 * 0.5 /(f1 * 0.5 + f0 * 0.5)
+y_hat_bayes_unbiased <- ifelse(p_hat_bayes_unbiased > 0.5, "Female", "Male")
+#Let's check the specificity
+print("Specificit")
+sensitivity(data = factor(y_hat_bayes_unbiased), reference=factor(test_set$sex))
+
+```
+#QDA & LDA
+```{r}
+data("mnist_27")
+#Let's get the conditional parameters
+mnist_27_parameters <- mnist_27$train %>% group_by(y) %>% summarize(avg_1=mean(x_1), avg_2=mean(x_2), sd_1=sd(x_1), sd_2=mean(x_2), r=cor(x_1, x_2))
+mnist_27_parameters
+train_qda <- train(y ~., method="qda", data = mnist_27$train)
+train_qda
+
+mnist_27$train %>% mutate(y = factor(y)) %>% 
+  ggplot(aes(x_1, x_2, fill = y, color=y))  + geom_point(show.legend = FALSE) + stat_ellipse(type="norm", lwd = 1.5)
+y_hat <- predict(train_qda, mnist_27$test)
+confusionMatrix(data = y_hat, reference = mnist_27$test$y)$overall["Accuracy"]
+```
+
+##Comprehension check
+
+```{r}
+set.seed(1993)
+data("tissue_gene_expression")
+ind <- which(tissue_gene_expression$y %in% c("cerebellum", "hippocampus"))
+y <- droplevels(tissue_gene_expression$y[ind])
+x <- tissue_gene_expression$x[ind, ]
+x <- x[, sample(ncol(x), 10)]
+#Use the train function to estimate the accuracy of LDA.
+train_set <- as.data.frame(x) %>% mutate(y=paste(y))
+rownames(train_set) <- c()
+train_lda <- train(y ~., method="lda", data = train_set)
+
+#Repeat the exercise in Q1 with QDA.
+#Create a dataset of samples from just cerebellum and hippocampus, two parts of the brain, and a predictor matrix with 10 randomly selected columns using the following code:
+set.seed(1993)
+data("tissue_gene_expression")
+ind <- which(tissue_gene_expression$y %in% c("cerebellum", "hippocampus"))
+y <- droplevels(tissue_gene_expression$y[ind])
+x <- tissue_gene_expression$x[ind, ]
+x <- x[, sample(ncol(x), 10)]
+train_set <- as.data.frame(x) %>% mutate(y=paste(y))
+rownames(train_set) <- c()
+train_qda <- train(y ~., method="qda", data = train_set, preProcessing = "scale")
+t(train_qda$finalModel$means) %>% data.frame() %>%
+	mutate(predictor_name = rownames(.)) %>%
+	ggplot(aes(cerebellum, hippocampus, label = predictor_name)) +
+	geom_point() +
+	geom_text() +
+	geom_abline()
+```
+
+```{r}
+
+#Now we are going to increase the complexity of the challenge slightly: we will consider all the tissue types. Use the following code to create your dataset:
+
+set.seed(1993)
+data("tissue_gene_expression")
+y <- tissue_gene_expression$y
+x <- tissue_gene_expression$x
+x <- x[, sample(ncol(x), 10)]
+train_set <- as.data.frame(x) %>% mutate(y=paste(y))
+train_lda <- train(y ~., method="lda", data = train_set)
+
+```
+#Classification with more than two classes
+##RTrees
+```{r}
+data("olive")
+head(olive)
+#Remove area, as we don't use it.
+olive <- select(olive,-area)
+#Let's use knn for determining Region over fatty acid content:
+library(caret)
+fit <- train(region ~ ., method="knn", tuneGrid=data.frame(k=seq(1,15,2)), data = olive)
+ggplot(fit)
+olive %>% gather(fatty_acid, percentage, -region) %>%
+  ggplot(aes(region, percentage, fill = region)) +
+  geom_boxplot() + 
+  facet_wrap(~fatty_acid, scales = "free")
+
+#Let's check out  linoleic/eicosenoic rate per region
+p <- olive %>% 
+  ggplot(aes(eicosenoic, linoleic, color = region)) + 
+  geom_point()
+#Let's examine 2008 polls:
+data("polls_2008")
+qplot(day, margin, data = polls_2008)
+#Rpart lets R users (; partition according to RSS(Residual sum of squares)
+fit_rpart <- rpart(margin ~ ., data=polls_2008)
+plot(fit_rpart, margin=1)
+text(fit_rpart, cex=0.5)
+#Pruning let's acummulate branches of overtrained tree.
+#Overtraining:
+fit_unrpruned <- rpart(margin ~., data=polls_2008, cp=0, minsplit=2)
+polls_2008 %>% mutate(y_hat = predict(fit_unrpruned)) %>% ggplot() + geom_point(aes(day, margin)) +   geom_step(aes(day, y_hat), col="red")
+#Now let's prune and examine
+fit_pruned <- prune(fit_unrpruned, cp=0.01)
+polls_2008 %>% mutate(y_hat = predict(fit_pruned)) %>% ggplot() + geom_point(aes(day, margin)) +   geom_step(aes(day, y_hat), col="red")
+#Examining Complexity parameter's best value can be done through cross-validation
+train_rpart <-  train(margin ~ ., method="rpart", tuneGrid = data.frame(cp = seq(0,0.05, len=25)), data = polls_2008)
+ggplot(train_rpart)
+```
+Expected conditional probability $$f(x) = \mbox{E}(Y | X = x)$$
