--- a/R-MachineLearning.Rmd
+++ b/R-MachineLearning.Rmd
@@ -1043,10 +1043,10 @@ dat %>%
 	ggplot() +
 	geom_point(aes(x, y)) +
 	geom_step(aes(x, y_hat), col = 2)
-rf_fit <- train (y ~ ., data = dat, method="Rborist", tuneGrid = data.frame(predFixed = 1, minNode = seq(25, 100, 25)))
-plot(rf_fit)
+fit_rf <- train (y ~ ., data = dat, method="Rborist", tuneGrid = data.frame(predFixed = 1, minNode = seq(25, 100, 25)))
+plot(fit_rf)
 dat %>% 
-	mutate(y_hat = predict(rf_fit)) %>% 
+	mutate(y_hat = predict(fit_rf)) %>% 
 	ggplot() +
 	geom_point(aes(x, y)) +
   geom_step(aes(x, y_hat), col = 2)
@@ -1067,7 +1067,7 @@ text(fit_rpart$finalModel, cex=0.5)
 
 #What value of mtry maximizes accuracy?
 set.seed(1991)
-fit_rb<- with(tissue_gene_expression, train(x,y, method="rf", tuneGrid = data.frame(mtry = seq(50, 200, 25)), nodesize=1))
+fit_rpart<- with(tissue_gene_expression, train(x,y, method="rf", tuneGrid = data.frame(mtry = seq(50, 200, 25)), nodesize=1))
 
 #The rpart model we ran above produced a tree that used just seven predictors. Extracting the predictor names is not straightforward, but can be done. If the output of the call to train was fit_rpart, we can extract the names like this:
 tree_terms <- as.character(unique(fit_rpart$finalModel$frame$var[!(fit_rpart$finalModel$frame$var == "<leaf>")]))
@@ -1135,23 +1135,36 @@ grid <- expand.grid(minNode = c(1) , predFixed = c(10, 15, 35))
 train_rf <-  train(x[, col_index],
                    y,
                    method = "Rborist",
-                   nTree = 50,
-                   trControl = control,
-                   tuneGrid = grid,
-                   nSamp = 5000)
+                   trControl = control)
 
 ggplot(train_rf)
 train_rf$bestTune
 
 fit_rf <- Rborist(x[, col_index], y, 
-                  nTree = 1000,
+                  nTree = 50,
                   minNode = train_rf$bestTune$minNode,
                   predFixed = train_rf$bestTune$predFixed)
 y_hat_rf <- factor(levels(y)[predict(fit_rf, x_test[ ,col_index])$yPred])
 cm <- confusionMatrix(y_hat_rf, y_test)
 cm$overall["Accuracy"]
 ```
+##Variable importance 
+```{r}
+set.seed(1)
+library(randomForest)
+index <- sample(nrow(mnist$train$images), 1000)
+x<-mnist$train$images[index,]
+y<-factor(mnist$train$labels[index])
+rf<-randomForest(x,y,ntree=50)
+imp <- importance(rf)
+image(matrix(imp, 28, 28))
+```
 
+##Ensembles
+```{r}
+#Let's combine RF & KNN
+pred_rf <- predict(fit_rf, x_test[,col_index])$census
+```
 ##Excercises 
 ```{r}
 #Use the training set to build a model with several of the models available from the caret package. We will test out all of the following models in this exercise:
@@ -1202,4 +1215,83 @@ caret::confusionMatrix(predict_vote,  mnist_27$test$y)
 votes <- rowMeans(pred == "7")
 y_hat <- ifelse(votes > 0.5, "7", "2")
 mean(y_hat == mnist_27$test$y)
+
+#How many models perform better than the ensemble?
+ind <- acc > mean(y_hat == mnist_27$test$y)
+sum(ind)
+models[ind]
+```
+
+```{r}
+#It is tempting to remove the methods that do not perform well and re-do the ensemble. The problem with this approach is that we are using the test data to make a decision. However, we could use the accuracy estimates obtained from cross validation with the training data. Obtain these estimates and save them in an object. Report the mean accuracy of the new estimates.
+
+
+
+acc <- sapply(fits, function(fit) {
+  mean(fit[['results']][['Accuracy']])
+})
+acc
+mean(acc)
+```
+
+```{r}
+#Now let's only consider the methods with an estimated accuracy of greater than or equal to 0.8 when constructing the ensemble.
+#What is the accuracy of the ensemble now?
+model s<- unlist(sapply(fits, function(fit) {
+  if(mean(fit[['results']][['Accuracy']]) > 0.8) {
+    fit$method
+  }
+}))
+fits <- lapply(models, function(model){ 
+	print(model)
+	train(y ~ ., method = model, data = mnist_27$train)
+}) 
+    
+names(fits) <- models
+pred <- sapply(fits, function(object) 
+	predict(object, newdata = mnist_27$test))
+dim(pred)
+acc <- colMeans(pred == mnist_27$test$y)
+acc
+```
+###Tissue gene expressions
+```{r}
+#We want to explore the tissue_gene_expression predictors by plotting them.
+library(ggplot2)
+data("tissue_gene_expression")
+dim(tissue_gene_expression$x)
+#We want to get an idea of which observations are close to each other, but, as you can see from the dimensions, the predictors are 500-dimensional, making plotting difficult. Plot the first two principal components with color representing tissue type. Which tissue is in a cluster by itself?
+pc <- prcomp(tissue_gene_expression$x)
+data.frame(pc_1 = pc$x[,1], pc_2 = pc$x[,2], 
+			tissue = tissue_gene_expression$y)  %>%
+	ggplot(aes(pc_1, pc_2, color = tissue)) +
+	geom_point()
+#The predictors for each observation are measured using the same device and experimental procedure. This introduces biases that can affect all the predictors from one observation. For each observation, compute the average across all predictors, and then plot this against the first PC with color representing tissue. Report the correlation.
+```
+
+```{r}
+#What is the correlation
+x <- with(tissue_gene_expression, sweep(x, 1, rowMeans(x)))
+pc <- prcomp(x)
+all_tissues <- rowMeans(data.frame(tissue_gene_expression$x))
+all <-data.frame(pc_1 = pc$x[,1], pc_2 = pc$x[,2], 
+			tissue = tissue_gene_expression$y, avg=all_tissues)
+cor(all$pc_1, all$avg)
+all %>% ggplot(aes(avg, pc_1, color = tissue)) +
+	geom_point()
+
+#We see an association with the first PC and the observation averages. Redo the PCA but only after removing the center. Part of the code is provided for you.
+
+data.frame(pc_1 = pc$x[,1], pc_2 = pc$x[,2], 
+			tissue = tissue_gene_expression$y) %>%
+	ggplot(aes(pc_1, pc_2, color = tissue)) +
+	geom_point()
+
+#For the first 10 PCs, make a boxplot showing the values for each tissue. For the 7th PC, which two tissues have the greatest median difference?
+allpcs<-data.frame(pc$x[,1:10], tissue=tissue_gene_expression$y)
+allpcs$tissue=as.factor(allpcs$tissue)
+ggplot(allpcs, aes(tissue, PC7)) + geom_boxplot()
+for(i in 1:10){
+	boxplot(pc$x[,i] ~ tissue_gene_expression$y, main = paste("PC", i))
+}
 ```
