--- a/R-MachineLearning.Rmd
+++ b/R-MachineLearning.Rmd
@@ -10,6 +10,7 @@ editor_options:
 Load necessary data.
 
 ```{r}
+
 check.packages <- function(pkg){
     new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
     if (length(new.pkg)) 
@@ -1294,4 +1295,60 @@ ggplot(allpcs, aes(tissue, PC7)) + geom_boxplot()
 for(i in 1:10){
 	boxplot(pc$x[,i] ~ tissue_gene_expression$y, main = paste("PC", i))
 }
+```
+#Recommendation systems
+
+```{r}
+library(dslabs)
+data("movielens")
+#How many users provided ratings for how many users
+movielens %>% summarize(users = n_distinct(userId), movies = n_distinct(movieId))
+##Using a smaller subset of movies, performancewise
+keep <- movielens %>%
+     dplyr::count(movieId) %>%
+     top_n(5) %>%
+     pull(movieId)
+tab <- movielens %>%
+     filter(userId %in% c(13:20)) %>% 
+     filter(movieId %in% keep) %>% 
+     select(userId, title, rating) %>% 
+     spread(title, rating)
+tab %>% knitr::kable()
+#The spread
+users <- sample(unique(movielens$userId), 100)
+movielens %>% filter(userId %in% users) %>% 
+select(userId, movieId, rating) %>%
+mutate(rating = 1) %>%
+spread(movieId, rating) %>% select(sample(ncol(.), 100)) %>% 
+as.matrix() %>% t(.) %>%
+image(1:100, 1:100,. , xlab="Movies", ylab="Users")
+abline(h=0:100+0.5, v=0:100+0.5, col = "grey")
+```
+Let's examine the data set.
+```{r}
+#Movie distribution
+n<-0
+movielens %>% 
+     dplyr::count(movieId) %>% 
+     ggplot(aes(n)) + 
+     geom_histogram(bins = 30, color = "black") + 
+     scale_x_log10() + 
+     ggtitle("Movies")
+#Examine user activity
+movielens %>% 
+     dplyr::count(userId) %>% 
+     ggplot(aes(n)) + 
+     geom_histogram(bins = 30, color = "black") + 
+     scale_x_log10() + 
+     ggtitle("Users")
+```
+Build a test and training set.
+```{r}
+library(caret)
+set.seed(755)
+test_index <- createDataPartition(y = movielens$rating, times = 1,
+                                  p = 0.2, list = FALSE)
+train_set <- movielens[-test_index,]
+#It is not enough to make a set negative, because users and movies might be missing from the training set.
+test_set <- train_set %>% semi_join(train_set, by="movieId") %>% semi_join(train_set, by="userId")
 ```
